fix overflow to messages-field

--- a/app/assets/stylesheets/talksphere/index.css
+++ b/app/assets/stylesheets/talksphere/index.css
@@ -13,6 +13,7 @@
 
 .messages-field {
     height: 65vh;
+    overflow-y: scroll;
 }
 
 #message-content {
